--- a/week6/css/main.css
+++ b/week6/css/main.css
@@ -1,7 +1,11 @@
 body{
     color:darkslategray;
     font-family: Arial, Helvetica, sans-serif;
+    /* adding background image */
+    background-image: url(../images/white_brick_wall.png);
 }
+
+
 /* ctrl forward slash for comments. */
 
 h1{
@@ -28,7 +32,10 @@ nav ul a{
 
 /* Selecting element with id */
 #treatofweek{
-    background-color: lemonchiffon ;
+    /* color, image, repeat, position-x, position-y */
+    background: lightskyblue url(../images/bread.jpg) no-repeat center center ;
+    background-size: cover;
+    color: white;
 }
 /* Selecting elements with class value */
 .orange-link{
