--- a/week7/css/main.css
+++ b/week7/css/main.css
@@ -4,17 +4,38 @@ body{
     /* adding background image */
     background-image: url(../images/white_brick_wall.png);
 }
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+img{
+    width: 100%;
+}
+/* display and box-sizing */
+nav ul li{
+    display: inline-block;
+    width: 49%;
+    padding: 1em;
+    box-sizing: border-box;
+}
 
+nav ul a{
+    display: block;
+}
 
 /* ctrl forward slash for comments. */
 
+
 h1{
-    color: peru;
+    color: rgb(100, 105, 101);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
+
 }
 p{
     background-color: beige;  
 }
-h1, h2, h3, h4{ 
+h2, h3, h4{ 
     /* multiple at once */
     text-decoration: underline;
 }
@@ -29,9 +50,14 @@ nav ul a{
     color: inherit;
     text-decoration: none;
 }
-
+.orange-link.large-text{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
 /* Selecting element with id */
 #treatofweek{
+    position: relative;
     /* color, image, repeat, position-x, position-y */
     background: lightskyblue url(../images/bread.jpg) no-repeat center center ;
     background-size: cover;
@@ -41,17 +67,36 @@ nav ul a{
     /* 1.25 x 16 = 20px */
 
     /* 1em = 20px */
-    padding: 1em;
+    padding: 1em 1em 3em 1em;
     /* height: 100vh; */
     width: 50%;
 }
 /* Selecting elements with class value */
 .orange-link{
-    background-color: rgb(162, 211, 243);
-    color: orange;
+    background-color: rgba(162, 211, 243, 0.726);
+    color: rgb(212, 207, 207);
     text-decoration: none;
+    padding: 1em;
+    display: block;
 }
 
+/* Float */
+article,
+aside{
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.6) ;
+    border: 1px solid black;
+    padding:  1.5em;
+    box-sizing: border-box;
+    float: left;
+}
+aside{
+    width: 20%;
+}
+section{
+    clear: both;
+
+}
 
 .large-text{
     font-size: 24px;
@@ -134,5 +179,23 @@ table td:nth-child(2n+1){
 }
 
 footer{
-    background: mediumaquamarine;
+    background: rgba(135, 218, 233, 0.678);
+}
+
+ 
+
+/* css box model */
+section h3{
+    background-color: rgba(100, 148, 237, 0.671);
+    padding: 1em;
+    width: 50%;
+}
+
+section p{
+    width: 50%;
+    /* top- bottom left-right */
+    padding: 1em  .5em;
+    /* top right bottom left */
+    margin: -2em 2em 2em 2em;
+    border: 2px dashed orange;
 }
