--- a/week10/css/main.css
+++ b/week10/css/main.css
@@ -145,6 +145,26 @@ p{
     text-transform: uppercase;
     text-align: center;
 }
+/* Navigation */
+.nav-list li{
+    border-bottom: 1px solid gray;
+    text-align: center;
+}
+/* loVe HAte */
+.nav-list a,
+.nav-list a:link,
+.nav-list a:visited{
+    display: block;
+    padding: 1em 0;
+    text-decoration: none;
+}
+
+.nav-list a:hover,
+.nav-list a:focus,
+.nav-list a.current{
+    background-color: #00add8;
+    color: inherit;
+}
 /* Mobile App Section------------ */
 
 .btn{
@@ -160,6 +180,18 @@ p{
     color: inherit;
     background-color: #00add8;
 }
+/* -----------------Simple Actions---------- */
+.actions-list{
+    display: flex;
+    flex-flow: row wrap;
+}
+.actions-list li{
+    max-width: 50%;
+    padding: 1em;
+    text-align: center;
+    font-size: 1.5rem;
+}
+/* footer */
 .site-footer{
     border-top: 2px solid #00add8;
     margin-top: 20px;
@@ -192,6 +224,19 @@ p{
     .banner h1{
         color: white;
     }
+    /* Navigation */
+    .nav-list{
+        display: flex;
+
+    }
+    .nav-list li{
+        flex: 1;
+        border: none;
+        border-right: 1px solid gray;
+    }
+    .nav-list li:last-child{
+        border: none;
+    }
     .app img{
         width: 40%;
         float: left;
@@ -202,4 +247,13 @@ p{
         float: right;
     }
     /* add clear fix to parent */
+}
+
+/* --------------------------------------------------------
+                MEDIA QUERY 800PX AND ABOVE
+-----------------------------------------------------------*/
+@media screen and (min-width: 800px) {
+    .actions-list li{
+        width: 20%;
+    }    
 }
