--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -670,6 +670,11 @@ iframe{
     .our-vision a{
         margin-left: 50px;
     }
+    .services p{
+        padding-left: 0px;
+    }
+
+
 
 /* --------team--------- */
 
